--- a/test/index.html
+++ b/test/index.html
@@ -20,13 +20,7 @@
 			persist: false,    		
 			delimiter: /,(?:\s)/g,
 			create: true,
-			plugins: {
-				'gmailize': { 
-					validate: function(email) {
-						return email.match(/^[_a-z0-9-]+(\.[_a-z0-9-]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/);
-					} 
-				}
-			}
+			plugins: ['gmailize']
 		})
 	});
 </script>
