Fixed delimiter goof

--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,7 @@
 	$(function() {
 		$('#selectize').selectize({
 			persist: false,    		
-			delimiter: /,(?:\s)/g,
+			delimiter: ',',
 			create: true,
 			plugins: ['gmailize']
 		})
